# Safe-Your-Time

./: Cargo.toml  README.md
src/: main.rs  state_app.rs  utils.rs
src/client/: cli.rs
src/communication/: controller.rs  listener.rs  listener_socket.rs  mod.rs  responses.rs
src/managers/: linux.rs  macos.rs  mod.rs  windows.rs
src/models/: config.rs  day_of_week.rs  mod.rs  state_block.rs  time_block.rs
src/service/: firewall_service.rs  init_state_service.rs  listener_http_service.rs  listener_socket_service.rs  mod.rs  monitoring_apps_service.rs  timer_service.rs
src/storage/: mod.rs  surrealdb_storage.rs
syt-cli/: Cargo.toml
syt-communication/: Cargo.toml
syt-communication/src/: commands.rs  lib.rs
syt-extension/: manifest.json
syt-extension/chrome/: manifest.json  worker.js
syt-extension/ext/: content.js
syt-extension/src/: lib.rs
syt-models/: Cargo.toml
syt-models/src/: time_block.rs  time_register.rs
syt-plugin-web/: Cargo.toml
syt-plugin-web/ext/: background.js  content.js  manifest.json
syt-plugin-web/ext/pkg/: package.json  syt_plugin_web.d.ts  syt_plugin_web.js  syt_plugin_web_bg.wasm  syt_plugin_web_bg.wasm.d.ts
syt-plugin-web/src/: lib.rs
syt-web/: Cargo.toml  Dioxus.toml
sytd/: Cargo.toml
sytd/src/: main.rs  state_app.rs  utils.rs
sytd/src/communication/: commands.rs  controller.rs  listener_http.rs  listener_socket.rs  mod.rs  responses.rs
sytd/src/communication/http/: listener_http.rs  mod.rs  routers.rs  util.rs
sytd/src/listeners/: controller.rs  listener_http.rs  listener_socket.rs  mod.rs  routers.rs
sytd/src/managers/: linux.rs  macos.rs  mod.rs  windows.rs
sytd/src/models/: config.rs  mod.rs  state_block.rs  time_block.rs  time_register.rs  user.rs
sytd/src/service/: init_state_service.rs  listener_http_service.rs  listener_socket_service.rs  mod.rs  monitoring_apps_service.rs  notification_service.rs  timer_service.rs
sytd/src/storage/: json_storage.rs  mod.rs  surrealdb_storage.rs
