[package]
name = "SyT"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sytd"
path = "src/main.rs"

[[bin]]
name = "syt"
path = "src/client/cli.rs"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1.89"
surrealdb = { version = "2.3.7", features = ["kv-rocksdb", "kv-mem"] }
