[workspace]
resolver = "2"
members = ["sytd", "syt-web", "syt-models", "syt-communication"]

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
