[package]
name = "sytd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1.89"
sha1 = "0.10.6"
actix-web = "4"
notify-rust = "4.11.7"
actix-files = "0.6.8"
syt-models = { path = "../syt-models" }
#surrealdb = { version = "2.3.7", features = ["kv-rocksdb", "kv-mem"] }
